[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kosovopay"
version = "1.0.0"
description = "Python SDK for the KosovoPay payment API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "KosovoPay", email = "sdk@kosovo.sh" }]
keywords = ["payments", "kosovopay", "sdk", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
ulid = ["python-ulid>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-anyio>=0.0.0",
    "respx>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://kosovo.sh"
Documentation = "https://docs.kosovo.sh"
Repository = "https://github.com/kosovopay/kosovopay-python"

[tool.hatch.build.targets.wheel]
packages = ["src/kosovopay"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
